<resources>
    <string name="app_name">WeatherZone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visibility">Visibility</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="tenprature">Temprature</string>
    <string name="Celsius">Celsius</string>
    <string name="Kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="egypt_alexandria">Egypt Alexandria</string>
    <string name="no_places">No Places Yet</string>
    <string name="no_alerts">No Alerts Yet</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="alerts">Alerts</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="gps">Gps</string>
    <string name="map">Map</string>
    <string name="ok">OK</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="from_time">From Time</string>
    <string name="to_time">To Time</string>
    <string name="toAlertSpace" >           </string>
    <string name="todo">TODO</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="alarm">Alarm</string>
    <string name="StartDate">Start Date</string>
    <string name="ENdDate">End Date</string>
    <string name="StartTime">Start Time</string>
    <string name="ENdTime">End Time</string>
    <string name="save">Save</string>
    <string name="notification">Notification</string>
    <string name="weatherzone_alarm">WeatherZone Alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="alarm_description">Alarm Description</string>
    <string name="slogan">From rain or shine,\n\t\t\t\t\t\t\t\t\t\t\t\t\twe\'ve got you covered</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="CDeg">°C</string>
    <string name="FDeg">°F</string>
    <string name="KDeg">°K</string>
    <string name="metr">metr/s</string>
    <string name="mile">mile/h</string>
    <string name="hpa">hpa</string>
    <string name="visbilitym">m</string>
    <string name="yesMapAlert">Yes</string>
    <string name="CancelMapAlert">Cancel</string>

    <string name="NoInternetconnection">No Internet Connection</string>

    <string name="CheckYourconnection">Check Your Connection</string>
    <string name="am">AM</string>

    <string name="pm">PM</string>
    <string name="messageFavMapAlert">Are you sure you want to save </string>
    <string name="errorFavMapAlert"> Could not find location</string>
    <string name="messageHomeMapAlert">Are you sure you want to choose </string>

    <string name="chooseSpecificPlace">choose more specific place please</string>

    <string name="addFavAlertTitle">Add Favourite</string>
    <string name="addFavAlertMessage">Can\'t add favourite check your connection first</string>

    <string name="openFavAlertMessage">Can\'t open favourite check your connection first</string>

    <string name="messageDeleteFavAlert">Are you sure you want to delete favourite </string>

    <string name="titleDeleteFavAlert">favourite Deletion </string>


    <string name="messageDeleteAlarmAlert">Are you sure you want to delete this alert </string>

    <string name="titleDeleteAlarmAlert">Alert Deletion </string>
    <string name="titleOverlaypermission">Permission Required</string>
    <string name="messageOverlaypermission">This app requires the \'Display over other apps\' permission to use notification</string>
    <string name="grantPermissionBtn">Grant Permission</string>
    <string name="permissionrequiredtoaddalert">Permission must be granted to add alert</string>
    <string name="alertStartRequired">You must enter an alert start date and time</string>
    <string name="alertEndRequired">You must enter an alert end date and time</string>
    <string name="alertTypeNotSelected">You must select an alert type</string>
    <string name="weatherFineAlert">Weather is fine, no alerts for the scheduled period</string>

    <string name="enableNotification">Enable Notifications</string>

    <string name="enableNotificationText">you need to enable notifications to use this feature. Would you like to enable them now?</string>


    <string name="enableNotificationtBtn">Enable </string>
</resources>