<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alert_alarm_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_gradient_color"
    android:padding="10dp">


    <ImageView
        android:id="@+id/alertAlarmIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/weather_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/alertAlarmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/weatherzone_alarm"
        android:textColor="@color/darkBlue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/alertAlarmIcon"
        app:layout_constraintStart_toEndOf="@+id/alertAlarmIcon"
        app:layout_constraintTop_toTopOf="@+id/alertAlarmIcon"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/alertAlarmDiscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/alarm_description"
        android:textColor="@color/lightBlue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertAlarmTitle"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alertAlarmDismissBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/dismiss"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertAlarmDiscription" />

</androidx.constraintlayout.widget.ConstraintLayout>
